# Kbo_Stats

./: .dockerignore  .gitattributes  .gitignore  CHANGE.md  README.md  TODO.md  docker-compose.yml  railway.json  render.yaml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_core_tables.py  0002_add_partial_season_metadata.py  0003_create_team_rosters.py  0004_create_team_standings.py  0005_create_game_day_snapshots.py
backend/app/: __init__.py  main.py
backend/app/analytics/: batting_metrics.py  team_rankings.py
backend/app/api/: __init__.py  dependencies.py
backend/app/core/: __init__.py  config.py  constants.py  exceptions.py
backend/app/database/: __init__.py  base.py  importer.py  session.py
backend/app/ml/: __init__.py  artifacts.py  config.py  evaluation.py  explainability.py  features.py  growth.py  growth_config.py  inference.py  models.py  peak_config.py  peak_constraints.py  peak_features.py  peak_inference.py  peak_training.py  ranking.py  ranking_config.py  recommendation.py  recommendation_config.py  tabpfn_benchmark.py  training.py
backend/app/models/: __init__.py  common.py  game_day.py  import_batch.py  player.py  (+4 more)
backend/scripts/: __init__.py  benchmark_tabpfn.py  collect_game_day.py  import_2026_data.py  import_2026_rosters.py  import_2026_standings.py  import_data.py  train_next_season.py  train_peak_models.py  validate_growth_analysis.py  validate_recommendations.py  validate_value_ranking.py
backend/tests/: __init__.py  conftest.py  fakes.py
(+175 files in other folders)
