[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "kbo-ai-player-analytics-backend"
version = "0.1.0"
description = "기록의 다음 FastAPI backend"
requires-python = ">=3.12,<3.15"
dependencies = [
    "alembic>=1.14,<2",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "pymysql>=1.1,<2",
    "sqlalchemy>=2.0,<3",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<10",
    "pytest-cov>=6,<8",
    "ruff>=0.9,<1",
]
ml = [
    "joblib>=1.5,<2",
    "lightgbm>=4.6,<5",
    "numpy>=2.3,<3",
    "pandas>=2.3,<3",
    "scikit-learn>=1.7,<2",
    "shap>=0.48,<1",
    "xgboost>=3,<4",
]
tabpfn = [
    "joblib>=1.4,<2",
    "pandas>=2.2,<3",
    "tabpfn>=2.1,<3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider --cov=app --cov-report=term-missing --cov-fail-under=65"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
